<resources>
    <string name="app_name">Library App</string>
    <string name="home_page">Home Page</string>
    <string name="next_page">Next Page</string>
    <string name="search_page">Search Page</string>
    <string name="sign_up">Sign up </string>
    <string name="status">Nothing yet</string>
    <string name="action_settings">Settings</string>
    <string name="long_string"></string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="srch">Search Books</string>
    <string name="view_cart">View Cart</string>
    <string name="view_userinfo">History</string>
    <string name="wrong_passlabel">INVALID PASSWORD</string>
    <string name="nothing_yet">NOTHING YET</string>
</resources>