<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kaylo.funapp.MainActivity"
    android:id="@+id/home">

    <TextView
        android:layout_width   = "wrap_content"
        android:layout_height  = "wrap_content"
        android:textAppearance = "?android:attr/textAppearanceLarge"
        android:text           = "Welcome to The System"
        android:layout_weight  = "0.07"
        android:textStyle      = "bold"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width   = "wrap_content"
        android:layout_height  = "wrap_content"
        android:text           = "@string/log_in"
        android:id             = "@+id/next"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="121dp"
        android:contextClickable="true"
        android:onClick="loginPost" />

    <EditText
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/next"
        android:layout_alignStart="@+id/next"
        android:layout_marginTop="39dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:singleLine="true" />

    <EditText
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:id="@+id/pass"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name"
        android:password="true"
        android:layout_alignRight="@+id/name"
        android:layout_alignEnd="@+id/name"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Username:"
        android:layout_weight="0.07"
        android:textStyle="bold"
        android:id="@+id/userLabel"
        android:layout_alignTop="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Password:"
        android:layout_weight="0.07"
        android:textStyle="bold"
        android:id="@+id/passLabel"
        android:layout_alignBottom="@+id/pass"
        android:layout_alignRight="@+id/userLabel"
        android:layout_alignEnd="@+id/userLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wrong_passlabel"
        android:id="@+id/statusField"
        android:textColor="#ff0000"
        android:textSize="19sp"
        android:layout_above="@+id/next"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/signupbtn"
        android:contextClickable="true"
        android:onClick="signupPost"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/next"
        android:layout_alignStart="@+id/next"
        android:layout_marginBottom="57dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/role"
        android:textColor="#ff0000"
        android:textSize="19sp"
        android:textStyle="bold"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>

